Minor fixes to prevent content from being cut off in smaller browser windows

--- a/stylus/require/components.styl
+++ b/stylus/require/components.styl
@@ -216,6 +216,8 @@ body
     .wt_cta
         margin 2rem 0 0 auto
         max-width 500px
+        position relative
+        z-index 6
 
 /* donate banner */
 
