--- a/stylus/require/front-page.styl
+++ b/stylus/require/front-page.styl
@@ -39,7 +39,7 @@ body
                 color $text-color-light
 
                 .wt_section-image
-                    width 45vw
+                    width 41vw
 
             &#primary_content-block-2
                 margin-bottom 0
@@ -63,7 +63,7 @@ body
 
                 .wt_featured-item
                     width 28%
-                    height 495px
+                    height 525px
 
             &.news_content-block
                 margin-bottom 1rem
